--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-transition-group": "^4.4.5",
+    "axios": "^0.27.2",
     "handy-svg": "^1.0.8",
+    "html-react-parser": "^3.0.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
